# pact-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTENSIONS.md  Makefile  README.md  action.yml  cbindgen.toml  install.ps1  install.sh  prep_dist.sh  run.ps1  run.sh
.github/workflows/: cli.yml  reusable-build.yml  reusable-release.yml  test.yml
docker/: Dockerfile.alpine  Dockerfile.debian  NOTES.md  README.md  test
docker/hooks/: build
examples/: another-they.json  fail.json  me-they.json  mock_example-ruby.sh  mock_example-rust.sh  stub-health-check.json  stub_example-ruby.sh  stub_example-rust.sh  verifier_example-ruby.sh  verifier_example-rust.sh
src/: bin.rs  cli.rs
src/cli/: extension.rs  otel.rs  pact_broker_docker.rs  pact_broker_ruby.rs
tests/cmd/: main.toml
