[package]
name = "pact"
version = "0.6.0"
authors = ["Yousaf Nabi <you@saf.dev>"]
edition = "2021"
description = "Pact consolidated CLI - pact_core_mock_server, pact_verifier, pact-stub-server, pact-plugin-cli, pact-broker-cli in a single binary"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-cli"
readme = "README.md"
keywords = ["pact_core_mock_server", "pact_verifier", "pact-stub-server", "pact-plugin-cli", "pact-broker-cli"]
license = "MIT"
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "/README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.2", features = ["derive", "env", "cargo"] }
clap_complete = { version = "4.5.1", features = [] }
home = "0.5.5"

# tracing = "0.1.40"
# tracing-appender = "0.2.3"
# tracing-core = "0.1.32"
# tracing-log = "0.2.0"
# tracing-subscriber = "0.3.16"

# pact-stub-server = { version = "*", path = "/Users/saf/dev/pact-foundation/pact-stub-server"}
# pact_mock_server_cli = { version = "2.0.0-beta.1", path = "/Users/saf/dev/pact-foundation/pact-core-mock-server/pact_mock_server_cli"}
# pact-plugin-cli = { version = "*", path = "/Users/saf/dev/pact-foundation/pact-plugins/cli"}
# pact_verifier_cli = { version = "*", path = "/Users/saf/dev/pact-foundation/pact-reference/rust/pact_verifier_cli"}
# pact-broker-cli = { version = "*", path = "/Users/saf/dev/pact-foundation/pact-broker-cli"}
# pact-broker-cli = { version = "*", git = "https://github.com/pact-foundation/pact-broker-cli", branch = "main"}
pact-stub-server = { version = "*", git = "https://github.com/YOU54F/pact-stub-server.git", branch = "feat/cli_as_lib"}
pact_mock_server_cli = { version = "2.0.0-beta.1", git = "https://github.com/YOU54F/pact-core-mock-server.git", branch = "feat/cli_as_lib"}
pact-plugin-cli = { version = "*", git = "https://github.com/pact-foundation/pact-plugins", branch = "feat/cli_as_lib"}
pact_verifier_cli = { version = "*",  git = "https://github.com/YOU54F/pact-reference", branch = "feat/cli_as_lib"}
pact-broker-cli = { version = "0.2.0" }

[dev-dependencies]
trycmd = "0.15.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"
lto = true

[profile.release-aarch64-freebsd]
inherits = "release"
panic = "unwind"
# if panic abort is set for aarch64 freebsd, it fails in cross
# https://github.com/cross-rs/cross/issues/1363#issuecomment-1783917450

[target.'cfg(target_os = "freebsd")'.dependencies]
indexmap = { version = "1.9.3", features = ["std"] }
# requires std feature for detection with cross for aarch64-unknown-freebsd target
# https://github.com/tower-rs/tower/issues/466
# https://github.com/indexmap-rs/indexmap/pull/145


# [lib]
# name = "pact"  # Name of the library
# crate-type = ["cdylib", "staticlib"]  # For compiling to a shared library

[[bin]]
name = "pact"
path = "src/bin.rs"
